# 1C_kafka

./: .gitignore  AddInNative.cpp  AddInNative.h  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  readme.md
1C/: ОбработкаДляТестированияНовойВК.epf
1c-kafka-library-native/: Readme.md  kafka_connect_native.sln
1c-kafka-library-native/kafka_connect_native/: kafka_connect_native.cpp  kafka_connect_native.cpp.bak  kafka_connect_native.def  kafka_connect_native.h  kafka_connect_native.vcxproj  kafka_connect_native.vcxproj.filters  packages.config
NativeAPI/: AddInNative.cpp  AddInNative.d  AddInNative.h  AddInNative.vcxproj  Makefile  Makefile_32  dllmain.d  stdafx.d
docker/: dockerfile
src/: 1C_kafka.cpp  1C_kafka.h  1C_kafka.sln  1C_kafka.vcxproj  CMakeLists.txt  Consumer.cpp  Consumer.h  Makefile  TestComponent.cpp  linux_build.sh  packages.config  version.h
swd/: .gitignore  CMakeLists.txt  build.sh  version.h
swd/Example/KAFKA/: CMakeLists.txt  get_version.cpp  producer  producer.cpp
swd/src/: Consumer.cpp  Consumer.h  TestComponent.cpp  TestComponent.h
test/: Makefile  Readme.md  consumer  consumer.cpp  get_version  hello.cpp  producer.cpp  test.cpp  test.sln  test.vcxproj
test_1/: AddInNative.cpp  readme.md
ttyAddin/: Component.cpp  exports.cpp  ttyAddin.pro  ttyAddin_global.h  ttyaddin.cpp  ttyaddin.h
vagrant/: Vagrantfile  Vagrantfile_1C_server  Vagrantfile_postgre
